Fix GetDebugPolicyProviderName to handle DCHECK_ALWAYS_ON

BUG=846436

Change-Id: I9b3b504c75660d9d65fe24bbf0c592915f9f6b19
Reviewed-on: https://chromium-review.googlesource.com/1072508
Commit-Queue: Will Harris <wfh@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562536}
Former-commit-id: 72a97a3e5a3f74bbb82b12f3a27d013f449c5f0b